--- a/style.css
+++ b/style.css
@@ -4713,7 +4713,8 @@ color: rgba(29, 15, 28, 255);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 0 -30px
+    margin: 0 -30px;
+    padding: 0 15px;
 }
 
 .why-seo-item {
@@ -5850,6 +5851,32 @@ color: rgba(29, 15, 28, 255);
 
 /* service-pack-adapt */
 
+@media (max-width: 1300px) {
+
+    .mommyjob {
+        background-position: 49%;
+    }
+
+}
+
+@media (max-width: 1200px) {
+
+    .mommyjob {
+        background-position: 57%;
+    }
+
+}
+
+@media (max-width: 1100px) {
+
+    .mommyjob {
+        background-position: 63%;
+    }
+
+}
+
+
+
 @media (max-width: 1000px) {
 
     .wrapper-pack-shape {
@@ -5880,6 +5907,14 @@ color: rgba(29, 15, 28, 255);
 
 }
 
+@media (max-width: 600px) {
+
+    .wrapper-present-client {
+        width: auto;
+    }
+
+}
+
 @media (max-width: 400px) {
 
     .wrapper-pack-shape {
@@ -5890,7 +5925,159 @@ color: rgba(29, 15, 28, 255);
 
 /* service-pack-adapt! */
 
+/* smm-adapt */
+
+@media (max-width: 1100px) {
+
+    .dev-stage-list-seo {
+        flex-wrap: wrap;
+    }
+
+    .dev-stage-items-smm {
+        flex:1 40%;
+        margin: 20px 10px;
+    }
+
+    .dev-stage-title-seo {
+        text-align: center;
+    }
+
+}
+
+@media (max-width: 900px) {
+
+    .why-seo-list {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .why-seo-item {
+        max-width: 100%;
+        width: 560px;
+        margin-bottom: 15px;
+    }
+
+    .pack-item-list {
+        flex-direction: column;
+    }
+
+    .pack-item:nth-child(2) {
+        margin: 30px 0;
+    }
+
+    .pack-price-title {
+        text-align: center;
+    }
+
+}
+
+@media (max-width: 700px) {
+
+    .sml-info-service-smm-text {
+        width: auto;
+    }
+
+}
+
+@media (max-width: 600px) {
+
+    .why-seo-item {
+        max-width: 100%;
+        width: 490px;
+    }
+
+}
+
+@media (max-width: 500px) {
+
+    .why-seo-item {
+        max-width: 100%;
+        width: 360px;
+    }
+
+}
+
+@media (max-width: 400px) {
+
+    .why-seo-item {
+        max-width: 100%;
+        width: 300px;
+    }
+
+}
+
+/* smm-adapt! */
+
+/* web-site-adapt */
+
+@media (max-width: 1200px) {
+
+    .projects-list {
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .projects-list__item {
+            width: auto;
+            margin-bottom: 20px;
+    }
+
+    .projects-list__item-img {
+        height: auto;
+    }
+
+}
+
+@media (max-width: 1150px) {
+
+    .small-info-service-img {
+        width: 68%;
+    }
+
+}
+
+@media (max-width: 900px) {
+
+    .small-info-service-img {
+        width: 65%;
+        height: 90%;
+    }
+
+}
+
+@media (max-width: 800px) {
+
+    .small-info-service-img {
+        width: 60%;
+    }
+
+    
+@media (max-width: 700px) {
+
+    .small-info-service-img {
+        width: 54%;
+    }
+
+}   
+
+@media (max-width: 600px) {
+
+    .small-info-service-img {
+        width: auto;
+        height: auto;
+    }
+
+    .container-small-info-service-web-site {
+        flex-direction: column;
+        align-items: center;
+    }
+
+}    
 
 
+
+
+/* web-site-adapt! */
 
 /* ADAPTIV! */
