--- a/style.css
+++ b/style.css
@@ -1327,7 +1327,7 @@ button:focus{
 /* service-about */
 
 .service-about {
-    background: url(images/branding-services.png) no-repeat;
+    background:#f3f5f6 url(images/branding-services.png) no-repeat;
 }
 
 .container-service-about {
@@ -2187,11 +2187,11 @@ margin-bottom: 11px;
    }
 
 .price-design-text {
-    padding-left: 15px;
-    font-size: 20px;
+    /* padding-left: 15px; */
+    font-size: 16px;
 }  
 
-.check-service::before {
+/* .check-service::before {
     content: "";
     position: absolute;
     left: 10px;
@@ -2200,9 +2200,9 @@ margin-bottom: 11px;
     border: 1px solid rgba(255,255,255, .8);
     border-radius: 50%;
     /* background-color: rgba(255,255,255, .5); */
-}
+} */
 
-.price-design-text::before {
+/* .price-design-text::before {
     content: "";
     position: absolute;
     left: 10px;
@@ -2211,16 +2211,16 @@ margin-bottom: 11px;
     border-radius: 50%;
     /* background-color: #fff; */
     transform: translate(calc(50% + .5px), calc(50% + .5px));
-}
+} */
 
 /* input[type="checkbox"]:checked + label {
     background: #fff;
     color: #260063;
 } */
 
-.check:checked + .price-design-text::before {
+/* .check:checked + .price-design-text::before {
     background-color: #fff;  
-}
+} */
 
 /* .check:checked .check-service {
     background: #fff;
@@ -4856,6 +4856,130 @@ color: rgba(29, 15, 28, 255);
 
 /* SMM! */
 
+/* NAV-MOB */
+
+.mobile-menu-nav-list {
+    list-style: none;
+}
+
+.mobile-menu-nav-item {
+    margin: 15px 0;
+}
+
+.mobile-menu-nav-item__link {
+    text-decoration: none;
+}
+
+.mobile-menu-nav-item__link-text {
+    color: black;
+}
+
+.mobile-menu {
+    /* margin-left: 15px; */
+    position: fixed;
+    z-index: 25;
+    left: 0;
+    top: 0;
+    width: 270px;
+    height: 100vh;
+    background-color: #008eff;
+    transform: translateX(-100%);
+    transition: all .25s;
+}
+
+.mobile-menu_active {
+    transform: translateX(0);
+}
+
+.header-mobile {
+    position: fixed;
+    z-index: 22;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    width: 100%;
+    height: 149px;
+    padding: 20px 15px;
+    background-color: #fff;
+    box-shadow: 0 3px 5px rgba(0,0,0, .1);
+    background-color: #008eff;
+}
+
+.open-menu-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 11px;
+    border: none;
+    background-color: transparent;
+}
+
+.header-mobile-logo {
+    display: flex;
+    align-items: center;
+}
+
+.header-mobile-logo__img {
+    margin-top: 2px;
+}
+
+.header-mobile-actions {
+    display: flex;
+    margin-left: auto;
+}
+
+
+
+.mobile-menu-overlay {
+    position: fixed;
+    z-index: 24;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    visibility: hidden;
+    opacity: 0;
+    background-color: rgba(0,0,0, .5);
+    transition: all .15s;
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+}
+
+.mobile-menu-overlay_active {
+    visibility: visible;
+    opacity: 1;
+}
+
+.mobile-menu-content {
+    padding: 15px;
+    padding-top: 0;
+}
+
+.mobile-menu-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 15px;
+}
+
+.close-menu-btn {
+    background: transparent;
+    border: none;
+}
+
+@media (max-width: 1100px){
+
+    .header-mobile {
+        display: flex;
+    }
+
+
+
+}
+
+/* NAV-MOB! */
+
 
 /* ADAPTIP */
 
@@ -5074,9 +5198,9 @@ color: rgba(29, 15, 28, 255);
         flex: 1 25%;
     }
 
-    .price-design-text {
+    /* .price-design-text {
         font-size: 19px;
-    }
+    } */
 
     .about-us-digital-img {
         width: 50%;
@@ -5305,14 +5429,22 @@ color: rgba(29, 15, 28, 255);
     .info-service-img {
         width: 450px;
     }
+
+    .service {
+        display: none;
+    }
+
+    .services-lists {
+        display: none;
+    }
    
  }
 
  @media (max-width: 1100px) {
     
-    .service-big-img {
+    /* .service-big-img {
         width: 400px;
-    }
+    } */
 
     .sml-info-service-slogan {
         font-size: 24px;
@@ -5328,6 +5460,27 @@ color: rgba(29, 15, 28, 255);
 
     .info-service-img {
         width: 400px
+    }
+
+    .sml-info-service {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .design_choice {
+        margin-bottom: 0;
+    }
+
+    .wrapper-service-about {
+        height: auto !important;
+    }
+
+    .service-big-img {
+        margin-top: 15px;
+    }
+    
+    .sml-info-service-text {
+        width: auto;
     }
 
  }
@@ -5362,17 +5515,17 @@ color: rgba(29, 15, 28, 255);
         font-size: 20px;
     }
 
-    .service-big-img {
+    /* .service-big-img {
         width: 350px;
-    }
+    } */
 
  }
 
  @media (max-width: 900px) { 
 
-    .service-big-img {
+    /* .service-big-img {
         width: 320px;
-    }
+    } */
 
     .wrapper {
         height: 404px;
